# TextRedirector

./: README.md
EFMod/: info.json
EFMod/Page/: main.html
cpp/: CMakeLists.txt  native-lib.cpp
cpp/Includes/: field.hpp  initialize.hpp  log.hpp
cpp/Includes/tool/: export.hpp  redirect.hpp
cpp/Src/: initialize.cpp  log.cpp
cpp/Src/tool/: export.cpp  redirect.cpp
